--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "isomorphic-fetch": "^3.0.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "node-mocks-http": "^1.13.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-multi-carousel": "^2.8.4",
+    "react-spinners": "^0.13.8",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
