--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@sanity/client": "^6.4.9",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -30,6 +31,7 @@
     "react-spinners": "^0.13.8",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
+    "timeago.js": "^4.0.0-beta.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
