--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3",
     "timeago.js": "^4.0.0-beta.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
+    "@types/uuid": "^9.0.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4"
   }
