--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4"
