--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "test": "jest --watch --verbose",
+    "test": "jest --watch",
     "test-all": "jest --watchAll",
+    "test-verbose": "jest --watchAll --verbose",
     "start": "next start",
     "lint": "next lint"
   },
@@ -41,6 +42,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4"
+    "jest-environment-jsdom": "^29.6.4",
+    "next-router-mock": "^0.9.9"
   }
 }
